--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: changjun anson1992@163.com
  * @Date: 2024-01-05 10:36:01
  * @LastEditors: changjun anson1992@163.com
- * @LastEditTime: 2024-01-11 14:16:25
+ * @LastEditTime: 2024-02-02 14:07:25
  * @FilePath: /VUE3-VITE-TS-TEMPLATE/index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -13,7 +13,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image" href="/logo.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vue学习平台</title>
+  <title>开箱即用的中后台管理系统</title>
 </head>
 
 <body>
