--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  * @LastEditors: changjun anson1992@163.com
  * @LastEditTime: 2024-02-02 14:07:25
  * @FilePath: /VUE3-VITE-TS-TEMPLATE/index.html
- * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ * @Description: 承载页面
 -->
 <!doctype html>
 <html lang="en">
